@@ -1,0 +1,22 @@
+<?php
+
+namespace meteocontrol\client\vcomapi\endpoints\sub\tickets;
+
+use meteocontrol\client\vcomapi\endpoints\EndpointInterface;
+use meteocontrol\client\vcomapi\endpoints\sub\SubEndpoint;
+use meteocontrol\client\vcomapi\filters\YieldLossesCriteria;
+use meteocontrol\client\vcomapi\model\YieldLoss;
+
+class Peak extends SubEndpoint {
+
+    public function __construct(EndpointInterface $parent) {
+        $this->uri = '/peak';
+        $this->api = $parent->getApiClient();
+        $this->parent = $parent;
+    }
+
+    public function get(YieldLossesCriteria $criteria): YieldLoss {
+        $json = $this->api->run($this->getUri(), $criteria->generateQueryString());
+        return YieldLoss::deserialize($this->jsonDecode($json, true)['data']);
+    }
+}
