@@ -1,0 +1,8 @@
+{
+  "data": {
+    "result": 2.87754741,
+    "realLostYield": 41.29,
+    "comment": "",
+    "totalCompensation": 7.34962
+  }
+}
