@@ -32,3 +32,5 @@
 2022-04-20: Add ability to manipulate ticket fieldService property
 2022-08-31: Add environmental-savings endpoints
 2022-11-30: Add startedAt property for Alarm
+2022-12-08: Add Yield lose endpoints
+2023-03-21: Add new property DueDate to work order
